# anymal_docs_sdk

./: .gitignore  .gitmodules  README.md
anymal_common_config_files/: package.xml
anymal_common_config_files/config/: default.yaml
anymal_common_config_files/config/feature_toggles/anymal_snapshot/: enabled.yaml
anymal_common_config_files/config/feature_toggles/anymal_web/: enabled.yaml
anymal_common_config_files/config/feature_toggles/auditive_inspection_frequency/: enabled.yaml
anymal_common_config_files/config/feature_toggles/automatic_inspection_setup/: enabled.yaml
anymal_common_config_files/config/feature_toggles/data_synchronization/: enabled.yaml
anymal_common_config_files/config/feature_toggles/error_reporting/: automatic_minimal.yaml
anymal_common_config_files/config/feature_toggles/hallucinated_points/: disabled.yaml
anymal_common_config_files/config/feature_toggles/inspection_intelligence/: enabled.yaml
anymal_common_config_files/config/feature_toggles/log_bundler/: offline.yaml  online.yaml
anymal_common_config_files/config/feature_toggles/near_field_mapping_backend/: elevation-mapping.yaml  near-field-mapping.yaml
anymal_common_config_files/config/feature_toggles/rcu/: enabled.yaml
anymal_common_config_files/config/feature_toggles/remote_operation/: enabled.yaml
anymal_common_config_files/config/feature_toggles/slam/: simulated.yaml
anymal_common_config_files/config/feature_toggles/static_video_recording/: enabled.yaml
anymal_common_config_files/config/feature_toggles/telemetry/: enabled.yaml  full.yaml
docs/: apple_lamar.md  (+7 more)
(+62 files in other folders)
