<?xml version="1.0"?>

<package format="2">

  <name>anymal_common</name>
  <version>1.1.3</version>
  <description>ANYmal Configuration common to all generations</description>

  <license>Proprietary</license>

  <author email="mgaertner@anybotics.com">Magnus Gaertner</author>
  <author email="dlopez@anybotics.com">Daniel López Madrid</author>
  <maintainer email="mgaertner@anybotics.com">Magnus Gaertner</maintainer>
  <maintainer email="dlopez@anybotics.com">Daniel López Madrid</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
